add new website from server na

--- a/xem-phim-moi/tuong-tuong/index.html
+++ b/xem-phim-moi/tuong-tuong/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1785,40 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-toi-pham-thanh-tra-an-do" title="Câu chuyện tội phạm: Thanh tra Ấn Độ">
+          <a class="list-top-movie-link" href="/phim-moi/kiet-tac-kinh-dien-downton-abbey-phan-4" title="Kiệt tác kinh điển: Downton Abbey (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-toi-pham-thanh-tra-an-do-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiet-tac-kinh-dien-downton-abbey-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Câu chuyện tội phạm: Thanh tra Ấn Độ
+             Kiệt tác kinh điển: Downton Abbey (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Crime Stories: India Detectives
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-bac-2" title="Sòng Bạc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-bac-1995-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sòng Bạc
-            </span>
-            <span class="list-top-movie-item-en">
-             Casino
+             Downton Abbey (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1829,65 +1807,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-toc-an-thit-nguoi" title="Bộ Tộc Ăn Thịt Người">
+          <a class="list-top-movie-link" href="/phim-moi/gio-thoi-ban-ha-da-man-sinh-truong" title="Gió Thổi Bán Hạ (Dã Man Sinh Trưởng)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-toc-an-thit-nguoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gio-thoi-ban-ha-da-man-sinh-truong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bộ Tộc Ăn Thịt Người
+             Gió Thổi Bán Hạ (Dã Man Sinh Trưởng)
             </span>
             <span class="list-top-movie-item-en">
-             Cannibal Holocaust
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tro-choi" title="Trò chơi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trò chơi
-            </span>
-            <span class="list-top-movie-item-en">
-             The Game
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/under-the-open-sky" title="Under The Open Sky">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/under-the-open-sky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Under The Open Sky
-            </span>
-            <span class="list-top-movie-item-en">
-             Under The Open Sky
+             Wild Bloom
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mau-do-anh-dao" title="Màu Đỏ Anh Đào">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mau-do-anh-dao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Màu Đỏ Anh Đào
+            </span>
+            <span class="list-top-movie-item-en">
+             Cherry
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tho-ren-kiem-vi-dai" title="Thợ Rèn Kiếm Vĩ Đại">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-ren-kiem-vi-dai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thợ Rèn Kiếm Vĩ Đại
+            </span>
+            <span class="list-top-movie-item-en">
+             Sword of Destiny
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vi-anh-hung-cuoi-cung" title="Vị Anh Hùng Cuối Cùng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vi-anh-hung-cuoi-cung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vị Anh Hùng Cuối Cùng
+            </span>
+            <span class="list-top-movie-item-en">
+             Inuyashiki: Last Hero
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
