add new website from server na

--- a/xem-phim-moi/hanh-tinh-khi-vuong-quoc-moi/index.html
+++ b/xem-phim-moi/hanh-tinh-khi-vuong-quoc-moi/index.html
@@ -1201,7 +1201,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1791,84 +1791,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-gui-tat-ca-cac-em-nhung-nguoi-toi-da-yeu" title="Nhắn Gửi Tất Cả Các Em, Những Người Tôi Đã Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/thoi-nien-thieu-cua-barack-obama" title="Thời niên thiếu của Barack Obama">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-gui-tat-ca-cac-em-nhung-nguoi-toi-da-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-nien-thieu-cua-barack-obama-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhắn Gửi Tất Cả Các Em, Những Người Tôi Đã Yêu
+             Thời niên thiếu của Barack Obama
             </span>
             <span class="list-top-movie-item-en">
-             To Every You I've Loved Before
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/y-phi-cua-ta-khong-de-choc" title="Y Phi Của Ta Không Dễ Chọc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/y-phi-cua-ta-khong-de-choc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Y Phi Của Ta Không Dễ Chọc
-            </span>
-            <span class="list-top-movie-item-en">
-             I Have a Smart Doctor Wife
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bien-nien-su-narnia-hoang-tu-caspian" title="Biên Niên Sử Narnia: Hoàng Tử Caspian">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bien-nien-su-narnia-hoang-tu-caspian-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biên Niên Sử Narnia: Hoàng Tử Caspian
-            </span>
-            <span class="list-top-movie-item-en">
-             The Chronicles of Narnia: Prince Caspian
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/stronger-vuot-len-so-phan" title="Stronger: Vượt lên số phận">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/stronger-vuot-len-so-phan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Stronger: Vượt lên số phận
-            </span>
-            <span class="list-top-movie-item-en">
-             Stronger
+             Barry
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1879,21 +1813,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/black-space" title="Black Space">
+          <a class="list-top-movie-link" href="/phim-moi/bat-coc" title="Bắt Cóc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-space-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-coc-Kidnap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Black Space
+             Bắt Cóc
             </span>
             <span class="list-top-movie-item-en">
-             Black Space
+             Kidnap
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thien-than-nho-cua-dac-vu" title="Thiên thần nhỏ của đặc vụ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-than-nho-cua-dac-vu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiên thần nhỏ của đặc vụ
+            </span>
+            <span class="list-top-movie-item-en">
+             特工小萌妻
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/linh-moi-phan-1" title="Lính Mới (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-moi-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lính Mới (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Rookie (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mieruko-chan" title="Mieruko-chan">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mieruko-chan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mieruko-chan
+            </span>
+            <span class="list-top-movie-item-en">
+             Mieruko-chan
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
